--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,8 @@
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
 
+  --color-dark-sky-blue: #85c8d1;
+
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 }
 
