--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,9 +10,14 @@
 }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-1);
+  border-bottom: var(--color-grey-light-2);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
@@ -22,7 +27,6 @@
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-
   // grow - shrink - basis
   flex: 0 0 18%;
 }
