Build the Navigation.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -27,12 +27,18 @@
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
+
   // grow - shrink - basis
   flex: 0 0 18%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: orangered;
+  height: 80rem;
   // The element should grow as much as it can. Occupy the remaining 82%.
   flex: 1;
 }
