--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,6 +19,9 @@
   --color-dark-sky-blue: #85c8d1;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+  --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
