--- a/css/style.css
+++ b/css/style.css
@@ -384,11 +384,16 @@ body {
     height: 1rem;
     width: 1rem;
     margin-right: 0.7rem;
-    /* background-image: url(../img/chevron-thin-right.svg);
-    background-size: cover; */
-    background-color: var(--color-primary);
-    mask: url(../img/chevron-thin-right.svg);
-    mask-size: cover; }
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover; }
+    @supports (-webkit-mask: url()) or (mask: url()) {
+      .list__item::before {
+        background-color: var(--color-primary);
+        -webkit-mask: url(../img/chevron-thin-right.svg);
+        mask: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-size: cover;
+        background-image: none; } }
 
 .recommend {
   font-size: 1.3rem;
