--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -403,13 +403,18 @@
     margin-right: 0.7rem;
 
     // Older browsers
-    /* background-image: url(../img/chevron-thin-right.svg);
-    background-size: cover; */
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
     // Newer browsers - Masks
-    background-color: var(--color-primary);
-    mask: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
+    @supports (-webkit-mask: url()) or (mask: url()) {
+      background-color: var(--color-primary);
+      -webkit-mask: url(../img/chevron-thin-right.svg);
+      mask: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
