--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,7 +5,7 @@
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
 
-  @media only screen and (max-width: $bp-largest) {
+  @include respond(bp-largest) {
     margin: 0;
     max-width: 100%;
     width: 100%;
@@ -22,7 +22,7 @@
   justify-content: space-between;
   align-items: center;
 
-  @media only screen and (max-width: $bp-smallest) {
+  @include respond(bp-smallest) {
     flex-wrap: wrap;
     align-content: space-around;
     height: 11rem;
@@ -32,7 +32,7 @@
 .content {
   display: flex;
 
-  @media only screen and (max-width: $bp-medium) {
+  @include respond(bp-medium) {
     flex-direction: column;
   }
 }
@@ -61,11 +61,11 @@
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
 
-  @media only screen and (max-width: $bp-medium) {
+  @include respond(bp-medium) {
     padding: 3rem;
   }
 
-  @media only screen and (max-width: $bp-small) {
+  @include respond(bp-small) {
     flex-direction: column;
   }
 }
@@ -77,12 +77,12 @@
   flex: 0 0 60%;
   margin-right: 4.5rem;
 
-  @media only screen and (max-width: $bp-medium) {
+  @include respond(bp-medium) {
     padding: 2rem;
     margin-right: 3rem;
   }
 
-  @media only screen and (max-width: $bp-small) {
+  @include respond(bp-small) {
     margin-right: 0;
     margin-bottom: 3rem;
   }
