--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,12 +23,6 @@
 
   --line: 1px solid var(--color-grey-light-2);
 }
-// CSS variables don't work in media queries
-$bp-largest: 75em; // 1200px/16 = 75
-$bp-large: 68.75em; // 1100px
-$bp-medium: 56.25em; // 900px
-$bp-small: 37.5em; // 600px
-$bp-smallest: 31.25em; // 500px
 
 * {
   margin: 0;
@@ -45,7 +39,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 1 rem = 10px, 10/16 = 62.5
 
-  @media only screen and (max-width: $bp-large) {
+  @include respond(bp-large) {
     // Decrease to 8 px
     font-size: 50%;
   }
