--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --color-dark-sky-blue: #85c8d1;
+  --color-dark-sky-blue: #80bdff;
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --line: 1px solid var(--color-grey-light-2); }
@@ -64,7 +64,15 @@ body {
     .search {
       order: 1;
       flex: 0 0 100%;
-      background-color: var(--color-grey-light-2); } }
+      background-color: var(--color-grey-light-2); }
+      .search:focus-within {
+        border-top-width: 1px;
+        border-top-style: solid;
+        border-top-color: var(--color-dark-sky-blue);
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: var(--color-dark-sky-blue);
+        box-shadow: 0 0 0 0.3rem rgba(0, 123, 255, 0.25); } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
@@ -80,6 +88,9 @@ body {
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3); }
+      @media only screen and (max-width: 31.25em) {
+        .search__input:focus {
+          width: 90%; } }
     .search__input::-webkit-input-placeholder {
       font-weight: 100;
       color: var(--color-grey-light-4); }
