--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,7 +16,7 @@
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
 
-  --color-dark-sky-blue: #85c8d1;
+  --color-dark-sky-blue: #80bdff;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
